<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="enter">这是SDK_Sample的入口界面</string>
    <string name="app_name">名品夺宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="homelistview_wenzi1">即将揭晓</string>
	<string name="homelistview_wenzi2">最新晒单</string>
	<string name="homelistview_wenzi3">夺宝记录</string>
	<string name="homelistview_wenzi4">账户充值</string>
	<string name="homelistview_zuixinjiexiao">最新揭晓</string>
	<string name="homelistview_jiexiaoimage_text1">0元区</string>
	<string name="homelistview_jiexiaoimage_text2">10元区</string>
	<string name="homelistview_jiexiaoimage_text3">100元区</string>
	<string name="homelistview_jiexiaoimage_text4">限时购区</string>
	<string name="homelistview_chose_text1">最热</string>
	<string name="homelistview_chose_text2">最新</string>
	<string name="homelistview_chose_text3">高价</string>
	<string name="homelistview_chose_text4">低价</string>
	<string name="homelistview_gridview_text1">恭喜</string>
	<string name="homelistview_gridview_text2">获得</string>
	<string name="news_listview_text1">获得者：</string>
	<string name="news_listview_text2">本期闪购：</string>
	<string name="news_listview_text3">幸运闪购码：</string>
	<string name="news_listview_text4">揭晓时间：</string>
	<string name="news_child_tv2">人次</string>
	<string name="news_layout_text1">点击加载更多</string>
	<string name="news_layout_text2">正在加载</string>
	<string name="my_babay_account_number">账号</string>
	<string name="my_babay_paseword">登录密码</string>
	<string name="my_babay_default">请输入密码</string>
	<string name="mybaby_sign_button_text">登录</string>
	<string name="mybaby_sign_findpassword_text">找回密码</string>
	<string name="mybaby_sign">用户登录</string>
	<string name="mybaby_sign_register">免费注册</string>
	<string name="mybaby_title_text">登录</string>
	<string name="mybaby_register_text1">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号 :</string>
	<string name="mybaby_register_text2">设置密码：</string>
	<string name="mybaby_register_text3">验证码</string>
	<string name="mybaby_register_title_text">注册</string>
	<string name="mybaby_register_button">提交</string>
	<string name="mybaby_member_button_text">退出登录</string>
	<string name="mybaby_member_text">用户注册</string>
	<string name="mybaby_sign_text">登录密码:</string>
	<string name="mybaby_sign_button_text_1">登录</string>
	<string name="mybaby_retrieve_text">找回密码</string>
	<string name="mybaby_retrieve_button_text">下一步</string>
	<string name="mybaby_retrieve_text1">短息验证:</string>
	<string name="mybaby_retrieve_text2">设置密码:</string>
	<string name="mybaby_retrieve_text3">重新发送</string>
	<string name="mybaby_retrieve_tv1">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
	<string name="mybaby_retrieve_tv2">验证密码:</string>
	<string name="mybaby_member_title_text">我的名品</string>

	<string name="error_please_check_network">请检查网络。</string>
	<string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
	<string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
	<string name="error_url_error">URL错误。</string>
	<string name="error_not_found_cache">没有找到缓存.</string>
	<string name="error_system_unsupport_method">系统不支持的请求方法。</string>
	<string name="error_parse_data_error">解析数据时发生错误。</string>
	<string name="error_unknow">未知错误。</string>
	<string name="wait_dialog_title">正在请求，请稍后…</string>
	<string name="error_response_code">服务器响应码%1$d</string>
	<string name="error_response_code_dex">服务器响应码%1$d，如果你们服务器在这种情况下也返回数据你可以处理。</string>
	<!-- Download error -->
	<string name="download_error">下载出错了：%1$s</string>
	<string name="download_error_server">服务器数据错误！</string>
	<string name="download_error_network">网络不可用，请检查网络！</string>
	<string name="download_error_storage">存储卡错误，请检查存储卡！</string>
	<string name="download_error_space">存储卡空间不足！</string>
	<string name="download_error_timeout">下载超时！</string>
	<string name="download_error_un_know_host">找不到服务器。</string>
	<string name="download_error_url">URL地址错误。</string>
	<string name="download_error_un">未知错误。</string>
</resources>
