<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/title" />

        <com.angel.devil.view.AsyncImageView
            android:id="@+id/homelistview_item1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_listview_image_height"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shouye_xuanze"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/home_image_pading"
                android:paddingRight="@dimen/home_image_pading" >

                <ImageView
                    android:id="@+id/home_listview_imge1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jijiang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_listview_imge1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/homelistview_wenzi1"
                    android:textSize="@dimen/home_image_textsize" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/home_image_pading"
                android:paddingRight="@dimen/home_image_pading" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/zuixin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homelistview_wenzi2"
                    android:textSize="@dimen/home_image_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/home_image_pading"
                android:paddingRight="@dimen/home_image_pading" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/duobaojilv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homelistview_wenzi3"
                    android:textSize="@dimen/home_image_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/home_image_pading"
                android:paddingRight="@dimen/home_image_pading" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/zhanghu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homelistview_wenzi4"
                    android:textSize="@dimen/home_image_textsize" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_kongbai_height"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/shouye_xuanze"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/home_zuixinjixiao_toandbumme"
                    android:text="@string/homelistview_zuixinjiexiao"
                    android:textSize="@dimen/home_image_textsize" />

                <ImageView
                    android:id="@+id/listview_zuixin_imagebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="@dimen/home_zuixinjixiao_toandbumme"
                    android:src="@drawable/genduo" />
            </RelativeLayout>
            <!-- 此处显示最新揭晓内容 -->

            <GridView
                android:id="@+id/home_list_gridview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:numColumns="3"
                android:padding="10dp" >
            </GridView>
        </LinearLayout>

        <!-- 抢购区按钮处 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/home_listview_qianggou_paddingBottom"
            android:paddingLeft="@dimen/home_listview_qinagou_paddingLeft"
            android:paddingRight="@dimen/home_listview_qinagou_paddingLeft" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/home_listview_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image0" />

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:text="@string/homelistview_jiexiaoimage_text1"
                    android:textSize="@dimen/home_image_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/home_listview_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image10" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/homelistview_jiexiaoimage_text2"
                    android:textSize="@dimen/home_image_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/home_listview_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image100" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homelistview_jiexiaoimage_text3"
                    android:textSize="@dimen/home_image_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/home_listview_xian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/xianshi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homelistview_jiexiaoimage_text4"
                    android:textSize="@dimen/home_image_textsize" />
            </LinearLayout>
        </LinearLayout>

        <!-- 选择排序区 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shouye_xuanze"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/home_chose_paddingLeft"
            android:paddingRight="@dimen/home_chose_paddingRight"
            android:paddingTop="@dimen/title_paddingTop" >

            <!-- 最热 -->

            <LinearLayout
                android:id="@+id/home_listviev_daohang_layout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/home_listviev_daohang_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/homelistview_chose_text1" />

                <ImageView
                    android:id="@+id/home_listviev_daohang_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/home_listview_paixu_left" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_listviev_daohang_layout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/home_listviev_daohang_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/homelistview_chose_text2" />

                <ImageView
                    android:id="@+id/home_listviev_daohang_img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/home_listview_paixu_left" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_listviev_daohang_layout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/home_listviev_daohang_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/homelistview_chose_text3" />

                <ImageView
                    android:id="@+id/home_listviev_daohang_img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/home_listview_paixu_left" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_listviev_daohang_layout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/home_listviev_daohang_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/homelistview_chose_text4" />

                <ImageView
                    android:id="@+id/home_listviev_daohang_img4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/home_listview_paixu_left" />
            </LinearLayout>
        </LinearLayout>

        <com.mpdb.view.GridView_listview
            android:id="@+id/home_listview_gridview_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="2" >
        </com.mpdb.view.GridView_listview>
    </ScrollView>

</LinearLayout>